--- a/communication-log/style.css
+++ b/communication-log/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background-color: black;
+    background-color: midnightblue;
     font-size: 150%;
     font-family: 'Sacramento', cursive;
     margin: 5em 25%;
